[gd_scene load_steps=18 format=2]

[ext_resource path="res://World/Enemies/enemyyy2.png" type="Texture" id=1]
[ext_resource path="res://World/Collision boxes/Hurtbox.tscn" type="PackedScene" id=2]
[ext_resource path="res://World/Enemies/Enemy.gd" type="Script" id=3]
[ext_resource path="res://World/Stats.tscn" type="PackedScene" id=4]
[ext_resource path="res://World/Enemies/PlayerDetection.tscn" type="PackedScene" id=5]
[ext_resource path="res://World/Collision boxes/Hitbox.tscn" type="PackedScene" id=6]
[ext_resource path="res://World/Sprites/shadow.png" type="Texture" id=7]
[ext_resource path="res://World/Collision boxes/SoftCollsion.tscn" type="PackedScene" id=8]
[ext_resource path="res://World/Enemies/WanderController.tscn" type="PackedScene" id=9]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 4.0
} ]

[sub_resource type="CapsuleShape2D" id=4]
radius = 12.563
height = 17.7412

[sub_resource type="CapsuleShape2D" id=5]
radius = 14.9228
height = 20.9696

[sub_resource type="CircleShape2D" id=6]
radius = 95.5486

[sub_resource type="CapsuleShape2D" id=7]
radius = 14.9273
height = 13.4642

[sub_resource type="CapsuleShape2D" id=8]
radius = 12.8378
height = 15.7628

[node name="Enemy" type="KinematicBody2D"]
collision_layer = 16
collision_mask = 0
script = ExtResource( 3 )
MAX_SPEED = 50
FRICTION = 100

[node name="Shadow" type="Sprite" parent="."]
position = Vector2( 13.0069, 32.3316 )
scale = Vector2( 2.06038, 2.06038 )
texture = ExtResource( 7 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 3 )
playing = true
centered = false
offset = Vector2( -18, -22 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 13.0963, 20.5513 )
shape = SubResource( 4 )

[node name="Hurtbox" parent="." instance=ExtResource( 2 )]
visible = false
position = Vector2( 13.0963, 41.1765 )
collision_layer = 8
collision_mask = 0

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( 0, -20.6252 )
shape = SubResource( 5 )

[node name="Stats" parent="." instance=ExtResource( 4 )]
max_health = 3

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 5 )]
visible = false
collision_layer = 1

[node name="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
modulate = Color( 1, 1, 1, 0.396078 )
position = Vector2( 13.6887, 19.9998 )
shape = SubResource( 6 )

[node name="Hitbox" parent="." instance=ExtResource( 6 )]
visible = false
monitoring = true
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" parent="Hitbox" index="0"]
modulate = Color( 0.862745, 0.0352941, 0.0352941, 1 )
position = Vector2( -1.54781, 3.2852 )
shape = SubResource( 7 )

[node name="SoftCollsion" parent="." instance=ExtResource( 8 )]
position = Vector2( 13.3937, 21.1323 )

[node name="CollisionShape2D" parent="SoftCollsion" index="0"]
position = Vector2( -0.595276, 0 )
shape = SubResource( 8 )

[node name="WanderController" parent="." instance=ExtResource( 9 )]

[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]

[editable path="Hurtbox"]
[editable path="PlayerDetectionZone"]
[editable path="Hitbox"]
[editable path="SoftCollsion"]
